# BytecodeLang

./: .editorconfig  LaunchTests.py  README.md  TODO.md  Value.cpp  _compiler.py  _test.txt  common.h  compiler.py  core.cpp  opcodes.h  opcodes.py  test.hex  test.txt  test_.hex
compiler/: assembler_compiler.py  assembly_compiler.py  compiler.py  disassembler.py  extensions.py  opcodes.py  tokenizer.py  vm_simulator.py
compiler/templates/: opcodes.txt  switch_case.txt  switch_goto.txt
tests/: _and_test.expected  _basic_test.expected  _fibonacci.expected  _function_call_test.expected  _function_capture_in_expression_test.expected  _function_capture_locals_test.expected  _function_declaration_test.expected  _if_test.expected  _jump_optimisation_test.expected  _jump_optimisation_test2.expected  _or_test.expected  _tabs_test.expected  _test.expected  _variables_test.expected  _while_test.expected  _wrong_behaviour.expected  and_test.byte  and_test.expected  basic_test.byte  basic_test.expected  basic_test.txt  fibonacci.byte  fibonacci.expected  function_call_test.byte  function_capture_in_expression_test.byte  function_capture_locals_test.byte  function_declaration_test.byte  if_test.byte  jumpOptimisation.byte  jumpOptimisation.expected  jumpOptimsation_test.expected  jump_optimisation_test2.byte  jump_optimisation_test_BUG.byte  or_test.byte  or_test.expected  or_test.txt  tabs_test.byte  tabs_test.expected  test.as.txt  test.expected  (+9 more)
vm/: CMakeLists.txt  Value.cpp  build.sh  common.h  core.cpp  core.h  opcodes.h
